--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "cally": "^0.8.0",
     "daisyui": "^5.0.43",
     "react": "^19.1.0",
